deliverables/week1/task2/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ecomm-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
