deliverables/week1/task2/virtualservice-frontend.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ecomm
spec:
  hosts:
  - "*"
  gateways:
  - ecomm-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 80
